tests/parse_only/errors/syn_lex/e16.src
.IPPcode21

JUMPIFEQ GF@var GF@a int@95
